--- a/style.css
+++ b/style.css
@@ -76,7 +76,7 @@ h1, h2, h3, h4, h5, h6 {
 
 .btn-search {
     position: absolute;
-    right: 5px;
+    left: 5px;
     top: 50%;
     transform: translateY(-50%);
     border: none;
