--- a/style.css
+++ b/style.css
@@ -191,6 +191,7 @@ h1, h2, h3, h4, h5, h6 {
     height: 250px;
     object-fit: cover;
     border-radius: 10px 10px 0 0;
+    cursor: pointer;
 }
 
 .product-price {
